--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "lastfm_monitor"
 version = "2.4.3"
-description = "Tool implementing real-time tracking of Last.fm users music activity"
+description = "Track Last.fm listening activity in real time with Spotify integration, automated playback, scrobble history and instant notifications"
 readme = "README.md"
 license = "GPL-3.0-or-later"
 license-files = ["LICEN[CS]E*"]
